[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -258.5
margin_top = -34.0
margin_right = 258.5
margin_bottom = 34.0

[node name="Level1Button" type="Button" parent="VBoxContainer"]
margin_right = 517.0
margin_bottom = 20.0
text = "Level1"
script = ExtResource( 1 )

[node name="Level2Button" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 517.0
margin_bottom = 44.0
text = "Level2"
script = ExtResource( 1 )

[node name="Level3Button" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 517.0
margin_bottom = 68.0
text = "Level3"
script = ExtResource( 1 )

[connection signal="pressed" from="VBoxContainer/Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2Button" to="." method="_on_Level2Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3Button" to="." method="_on_Level3Button_pressed"]
